# miwidothttp

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE  PERFORMANCE.md  README.md  README_FULL.md  benchmark-quick.sh  benchmark.sh  build.rs  changelog.txt  comprehensive-benchmark.sh  config-benchmark.toml  config-cluster.toml  config-errors.toml  config-full.toml  config-php.toml  config-proxy.toml  config-rewrites.toml  config-sessions.toml  config-vhosts.toml  config.toml  docker-benchmark.sh  docker-compose-benchmark.yml  docker-compose.benchmark.yml  docker-compose.yml  docker-vs-docker.sh  haproxy-miwidothttp.cfg  haproxy-nginx.cfg  nginx-benchmark.conf  test.sh
.github/workflows/: ci.yml  release.yml
benchmark/: README.md  run_benchmark.sh  setup.sh  visualize.py
bun-server/: server.js
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  CONFIGURATION.md  DEPLOYMENT.md  INSTALLATION.md  PACKAGING.md  SECURITY.md  TROUBLESHOOTING.md
examples/: cloudflare-setup.md
node-server/: package-lock.json  package.json  server.js
proto/: cluster.proto
src/: advanced_features.rs  cache.rs  circuit_breaker.rs  config.rs  connection_pool.rs  error.rs  graphql.rs  http3.rs  linux_io.rs  logging.rs  main.rs  main_broken.rs  metrics.rs  process.rs  process_manager.rs  proxy.rs  rewrite.rs  rewrite_engine.rs  security.rs  session.rs  session_manager.rs  static_cache.rs  vhost.rs  wasm_plugins.rs  websocket.rs
src/cluster/: consensus.rs  distribution.rs  gossip.rs  grpc.rs  health.rs  mod.rs  replication.rs
src/middleware/: mod.rs  session.rs
src/proxy/: fastcgi.rs  forward.rs  mod.rs
src/ssl/: cloudflare.rs  mod.rs
static/: index.html
static-test/: index.html
templates/errors/: 404.html
