[package]
name = "miwidothttp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP server framework
axum = { version = "0.7", features = ["http2", "ws", "macros"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "compression-full", "cors"] }

# TLS/SSL
rustls = "0.23"
rustls-pemfile = "2.0"
tokio-rustls = "0.26"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# Cloudflare API client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utils
futures = "0.3"
bytes = "1.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Process management for apps
nix = { version = "0.29", features = ["process", "signal"] }

# Compression for log rotation
flate2 = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
