[package]
name = "miwidothttp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP server framework
axum = { version = "0.7", features = ["http2", "ws", "macros"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "compression-full", "cors"] }

# TLS/SSL
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
tokio-rustls = "0.26"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# Cloudflare API client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utils
futures = "0.3"
bytes = "1.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2.0"

# Process management for apps
nix = { version = "0.29", features = ["process", "signal"] }

# Compression for log rotation
flate2 = "1.0"

# Pattern matching for vhosts and rewrite rules
regex = "1.10"

# System information for metrics
sys-info = "0.9"

# Session management
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# Cluster support
chitchat = "0.7"
etcd-rs = "1.0"
tonic = "0.11"
prost = "0.12"
hashring = "0.3"
bincode = "1.3"
raft = "0.7"

# WebSocket support
tokio-tungstenite = "0.24"

# HTTP/3 & QUIC support
quinn = "0.11"
h3 = "0.0.6"
h3-quinn = "0.0.7"

# GraphQL support
async-graphql = "7.0"
async-graphql-axum = "7.0"

# WebAssembly plugin support
wasmtime = "27.0"
wasmtime-wasi = "27.0"

# io_uring support (Linux)
tokio-uring = { version = "0.5", optional = true }

# Circuit breaker is already included in tower above

# Connection pooling
deadpool = "0.12"
bb8 = "0.8"

# Advanced caching
moka = { version = "0.12", features = ["future"] }
cacache = "13.0"

# Additional system info
num_cpus = "1.16"
hostname = "0.4"

[build-dependencies]
tonic-build = "0.11"

[features]
default = ["full"]
full = ["websocket", "http3", "grpc", "graphql", "wasm-plugins", "clustering"]
websocket = []
http3 = []
grpc = []
graphql = []
wasm-plugins = []
clustering = []
io-uring = ["tokio-uring"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
